syntax = "proto3";
package accounts_pb;

message Account {
    string publicKey = 1;
    
    enum EntityType {
        PERSON = 0;
        ORGANIZATION = 1;
    }
    
    message PublicData {
        string number = 1;
        string dateOfBirth = 2;
        string address = 3;
        string photo = 4;
        string url = 5;
        string name = 6;
        EntityType type = 7;
    }

    PublicData publicData = 2;
}