syntax = "proto3";
package issuer_pb;

import "google/protobuf/timestamp.proto";
import "common.proto";

message AcademicCredential {
    Core core_info = 1;
    StorageHash storage_hash = 2;
}

message StorageHash {
    string hash = 1;
}

message Core {
    string name = 1;
    string school = 2;
    string issuer = 3;
    string recipient = 4;
    string date_earned = 5;
    string institutionId = 6;
    google.protobuf.Timestamp expiration = 7;
    string signature = 8;
    VerifyHelperData badgeforce_data = 9;
}

message VerifyHelperData {
    bool revokation_status = 1;
    ProofOfIntegrity proof_of_integrity_hash = 2;
}
